data/collection/fixes/descriptions/scala/scala-9899
```scala
Welcome to Scala 2.11.8 (Java HotSpot(TM) 64-Bit Server VM, Java 1.8.0_77).
Type in expressions for evaluation. Or try :help.

scala> import language.existentials
import language.existentials

scala> val pair: (A => String, A) forSome { type A } = ( { a: Int => a.toString }, 19 )
pair: (A => String, A) forSome { type A } = (<function1>,19)

scala> pair._1(pair._2)
<console>:13: error: type mismatch;
 found   : pair._2.type (with underlying type A)
 required: A
       pair._1(pair._2)
                    ^
```